<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Trivial Mobile</string>
    <string name="menu_settings">Settings</string>
    <string name="button_play">Play</string>
    <string name="text_start">Press button to start</string>
    <string name="menu_share">Share</string>
    <string name="menu_suggest">Suggest new question</string>
    <string name="menu_exit">Exit</string>
    <string name="settings_category_main">Main</string>
    <string name="settings_category_about">About</string>
    <string name="settings_option_sound">Sound</string>
    <string name="settings_option_sound_summary">Enable the sound in the app</string>
    <string name="settings_option_tts">TTS Reading</string>
    <string name="settings_option_tts_summary">Read the questions using the system Text To Speech</string>
    <string name="settings_options_language">Select language</string>
    <string name="settings_options_language_summary">Set language for questions</string>
    <string name="settings_option_vibrate_enabled">Vibrate</string>
    <string name="settings_option_vibrate_enabled_summary">Enables the vibration</string>
    <string name="button_continue">Continue</string>
    <string name="messagebox_exit_question">Do you want to exit?</string>
    <string name="result_correct">Right!</string>
    <string name="result_wrong">Wrong!</string>
    <string name="result_score">Score</string>
    <string name="result_points">Points</string>
    <string name="result_percent">Percent</string>
    <string name="text_gameover">Game Over</string>
    <string name="text_gameover_playagain">Play again</string>
    <string name="score_lives">Lives:</string>
    <string name="share_summary">The best trivial for your Android!</string>
    <string name="text_select_difficulty">Select the difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="category_art">Arts &amp; Literature</string>
    <string name="category_science">Science &amp; Nature</string>
    <string name="category_sports">Sports &amp; Leisure</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_geography">Geography</string>
    <string name="category_history">History</string>
    <string name="category_all">All</string>
    <string name="category">Category</string>
    <string name="question">Question</string>
    <string name="answer1">Answer 1 (Correct)</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="difficulty">Difficulty</string>
    <string name="language_default">System Default</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_french">French</string>
    <string name="language_german">German</string>
    <string name="language_italian">Italian</string>
<!-- <string name="language_catalan">Catalan</string> -->
    <string name="text_select_category">Select the categories</string>
    <string name="comments">Comments</string>
    <string name="text_send_error">Failed to send</string>
    <string name="text_received">Received!</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="upload">upload</string>
    <string name="ranking_title">Ranking Online</string>
    <string name="loading">loading. ..</string>
    <string name="ranking_summary_your">Your max score</string>
    <string name="highscore_title">Highscore</string>
    <string name="new_highscore_summary">Enter name</string>
    <string name="ranking_summary">Max scores</string>
    <string name="menu_correct">Report wrong question</string>
    <string name="reason_wrong_category">Wrong category</string>
    <string name="reason_wrong_answer">Wrong answer</string>
    <string name="reason_wrong_question">Wrong question text</string>
    <string name="reason_select_reason">Select a reason</string>
    <string name="reason_wrong_difficulty">Wrong difficulty</string>
    
    <string name="settings_option_timer_enabled">Timer</string>
    <string name="settings_option_timer_enabled_summary">Enable the timer for the questions</string>
    
</resources>
