<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >
        
        <TextView
            android:id="@+id/question_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
                
        <Spinner
            android:id="@+id/spinner_reason"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:prompt="@string/reason_select_reason" 
            
            />

        <TextView
            android:id="@+id/suggest_comments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments" />

        <EditText
            android:id="@+id/suggest_comments"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="100"
            android:inputType="textCapSentences" />
    </LinearLayout>

</ScrollView>