<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"  
        />
    
    <TextView
        android:id="@+id/score_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"  
        />

    <TextView
        android:id="@+id/score_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"  
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_lifes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/score_lives"
            android:layout_marginRight="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"  
            />

        <RatingBar
            android:id="@+id/score_lifes"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:max="5"
            android:numStars="5"
            android:progress="5"
            android:rating="5"
            android:stepSize="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_continue"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_blue"
            android:soundEffectsEnabled="false"
            android:text="@string/button_continue" />

    </LinearLayout>

</LinearLayout>
